infra/k8s/envoy-auth-config.yaml
apiVersion: cilium.io/v2
kind: CiliumEnvoyConfig
metadata:
  name: ext-authz-idp-config
  namespace: default
spec:
  backendServices:
    - name: django-service
      namespace: default
      number:
        - "80"
    - name: oauth2-proxy
      namespace: default
      number:
        - "4180"
    - name: keycloak
      namespace: default
      number:
        - "8080"
  services:
    - name: cilium-gateway-my-gateway
      namespace: default
      ports:
        - 80
  resources:
  - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
    name: my-custom-auth-listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10080
    filter_chains:
      - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              rds:
                config_source:
                  ads: {}
                  resource_api_version: V3
                route_config_name: listener-secure
              http_filters:
                - name: envoy.filters.http.ext_authz
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                    transport_api_version: V3
                    failure_mode_allow: false
                    http_service:
                      server_uri:
                        uri: http://oauth2-proxy.default.svc.cluster.local
                        cluster: "k8s/default/oauth2-proxy:4180"
                        timeout: 5s
                      authorization_request:
                        allowed_headers:
                          patterns:
                            - exact: cookie
                            - exact: authorization
                      authorization_response:
                        allowed_upstream_headers:
                          patterns:
                            - exact: authorization
                            - exact: x-auth-request-user
                            - exact: x-auth-request-email
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  - "@type": type.googleapis.com/envoy.config.route.v3.RouteConfiguration
    name: listener-secure
    virtual_hosts:
      - name: gateway-vhost
        domains: ["*"]
        routes:
          - match:
              prefix: "/auth"
            route:
              cluster: "k8s/default/keycloak:8080"
          - match:
              prefix: "/realms"
            route:
              cluster: "k8s/default/keycloak:8080"
          - match:
              prefix: "/resources"
            route:
              cluster: "k8s/default/keycloak:8080"
          - match:
              prefix: "/"
            route:
              cluster: "k8s/default/django-service:80"
  - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
    name: "k8s/default/django-service:80"
    connect_timeout: 5s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: "k8s/default/django-service:80"
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: django-service.default.svc.cluster.local
                    port_value: 80
  - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
    name: "k8s/default/oauth2-proxy:4180"
    connect_timeout: 5s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: "k8s/default/oauth2-proxy:4180"
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: oauth2-proxy.default.svc.cluster.local
                    port_value: 4180
  - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
    name: "k8s/default/keycloak:8080"
    connect_timeout: 5s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: "k8s/default/keycloak:8080"
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: keycloak.default.svc.cluster.local
                    port_value: 8080
