infra/k8s/route-keycloak.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: default
spec:
  parentRefs:
  - name: my-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /auth
    - path:
        type: PathPrefix
        value: /realms
    - path:
        type: PathPrefix
        value: /resources
    backendRefs:
    - name: keycloak.default.svc.cluster.local
      port: 8080
